add book citation

--- a/Sources.html
+++ b/Sources.html
@@ -4,6 +4,6 @@
     </head>
 
     <body>
-        <p></p>
+        <p>Hosseini, Khaled. The Kite Runner. TKR Publications, 2013.</p>
     </body>
 </html>
