--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
     <body>
         <center>
-            <h1>The Thesis</h1>
+            <h1>Past sins can be attoned for through the protection and nurturement of youth.</h1>
         </center>
     </body>
 
