Add css file, Edit Indiex.html, change KiteRunner,jpg. Note: css is not finished

--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,33 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>
             The Kite Runner
         </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="Style.css">
     </head>
 
     <body>
+          <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+            <ul class="nav navbar-nav">
+              <li><a href="Index.html">Home</a></li>
+            </ul>
+          </nav>
         <center>
-            <h1>Past sins can be attoned for through the protection and nurturement of youth.</h1>
+            <h1>The Kite Runner</h1>
+            <hr class = "four">
+            <img src="KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
+            <br> 
+            <h2>Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
+            <hr class="three">
+            <br>
         </center>
+            <p class="p1">
+                We beleive that one can attone for their sins by bringing up the future generation of children to be upstanding individuals
+            </p>
     </body>
-
+    
 </html>
