--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <embed src="Assets/test.mid" type="mid" autostart="True" loop="True" />
         <title>
             The Kite Runner
         </title>
@@ -9,7 +10,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="Style.css">
     </head>
-
     <body>
           <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
             <ul class="nav navbar-nav">
@@ -19,7 +19,7 @@
         <center>
             <h1>The Kite Runner</h1>
             <hr class = "four">
-            <img src="KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
+            <img src="Assets/KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
             <br> 
             <h2>Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
             <hr class="three">
