--- a/Psycology.html
+++ b/Psycology.html
@@ -4,6 +4,24 @@
     </head>
 
     <body>
-        
+            <center>
+                    <h1>Psycology</h1>
+                    <br>
+                    <h2></h2>
+                </center>
+                <center>
+                    <p>
+                        Psycology is important in understanding people and the means in which they interact: <br>
+                        "After the initial shock of the transition to parenthood, parents expressed feeling special <br>
+                        and reported increased self-esteem." (Nomaguchi np). Through being able to raise and nurture <br>
+                        Sohrab, Amir becomes more comfident in himself and has a higher self-esteem. This boost in self <br>
+                        esteem also makes Amir feel more or less absolved of sin. <br>
+
+                        "In [a] study that focused on women with professional careers, mothers expressed that <br>
+                        they 'fell in love' with their children." (Nomaguchi np). Amir begins to feel the same <br>
+                        unconditional for Sorhab as he would his own child immediately after leaving Afganistan. <br>
+                        He does, in fact, "fall in love" with Sohrab, and starts to focus intensly on his needs. <br>
+                    </p>
+                </center>
     </body>
 </html>
