--- a/Redemption.html
+++ b/Redemption.html
@@ -1,9 +1,36 @@
 <html>
     <head>
+        <title>
+            Redemption
+        </title>
         <link rel="stylesheet" href="Style.css">
     </head>
 
     <body>
-        
+        <center>
+            <h1>Redemption</h1>
+            <br>
+            <h2>Redemption rears its head in The Kite Runner in many forms</h2>
+        </center>
+        <center>
+            <p>
+                Some of the more prominent examples: <br>
+                "There is a way to be good again" (Hosseini 2). <br>
+                A line repeated many times, and for good reason. Amir realizes <br>
+                that there is a way to find the redemption he so desperately wants. <br>
+                Redemption in the form of helping a particular child. <br>
+
+                "A way to end the cycle. With a little boy. An orphan. <br>
+                Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
+                comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
+                able to do wat he couldn't back in the alley and be brave. <br>
+
+                "I looked down at Sohrab. One corner of his mouth had curled up <br>
+                just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
+                Afganistan, Amir feels almost redeemed, but not quite. In helping <br>
+                Sohrab be happy again, Amir completes the task given to him to <br>
+                Rahim Kahn, to be good again. <br>
+            </p>
+        </center>
     </body>
 </html>
