Connect files together, reorganize code, turn test.mid into test.wav, try to work on audio but did not scceed on this attempt, made webpages look a bit better, no work on major styling

--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <embed src="Assets/test.mid" type="mid" autostart="True" loop="True" />
         <title>
             The Kite Runner
         </title>
@@ -11,9 +10,14 @@
         <link rel="stylesheet" href="Style.css">
     </head>
     <body>
-          <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+
+        <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
             <ul class="nav navbar-nav">
-              <li><a href="Index.html">Home</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Repentance.html">Repentance</a></li>
+                <li><a href="Redemption.html">Redemption</a></li>
+                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Sources.html">Sources</a></li>
             </ul>
           </nav>
         <center>
@@ -25,9 +29,9 @@
             <hr class="three">
             <br>
         </center>
-            <p class="p1">
-                We beleive that one can attone for their sins by bringing up the future generation of children to be upstanding individuals
-            </p>
+        <p class="p1">
+            We beleive that one can attone for their sins by bringing up the future generation of children to be upstanding individuals
+        </p>
     </body>
     
 </html>
