--- a/Redemption.html
+++ b/Redemption.html
@@ -1,12 +1,23 @@
 <html>
     <head>
         <title>
-            Redemption
+           Redemption
         </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="Style.css">
     </head>
-
     <body>
+        <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+            <ul class="nav navbar-nav">
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Repentance.html">Repentance</a></li>
+                <li><a href="Redemption.html">Redemption</a></li>
+                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Sources.html">Sources</a></li>
+            </ul>
+        </nav>
         <center>
             <h1>Redemption</h1>
             <br>
@@ -19,12 +30,16 @@
                 A line repeated many times, and for good reason. Amir realizes <br>
                 that there is a way to find the redemption he so desperately wants. <br>
                 Redemption in the form of helping a particular child. <br>
-
+                <br>
+                <hr>
+                <br>
                 "A way to end the cycle. With a little boy. An orphan. <br>
                 Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
                 comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
                 able to do wat he couldn't back in the alley and be brave. <br>
-
+                <br>
+                <hr>
+                <br>
                 "I looked down at Sohrab. One corner of his mouth had curled up <br>
                 just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
                 Afganistan, Amir feels almost redeemed, but not quite. In helping <br>
