--- a/Repentance.html
+++ b/Repentance.html
@@ -1,27 +1,43 @@
 <html>
     <head>
-        <link rel="stylesheet" href="Style.css">
+            <title>
+                Repentance
+            </title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+            <link rel="stylesheet" href="Style.css">
     </head>
-
     <body>
-            <center>
-                    <h1>Repentance</h1>
-                    <br>
-                    <h2></h2>
-                </center>
-                <center>
-                    <p>
-                        Repentance can manifest itself to affect people's lives in many ways: <br>
-                        "I could almost feel the emptiness in Soraya's womb, like it was a living, <br>
-                        breathing thing." (Hosseini 189). Through what seems to be divine intervention, <br>
-                        Amir's guilt manifests itself as an inability to have a child. Amir hasn't <br>
-                        redeemed himself for his cowardice, and thus isn't able to produce offspring. <br>
-
-                        "Then late that fall, Farzana gave birth to a stillborn baby girl." (Hosseini 209). <br>
-                        Hassan's repentance comes in the form of his first stillborn child. Repentence not <br>
-                        for his sins (he seemingly dosen't have any), but the sin of his father being not Ali, <br>
-                        but Baba. He also must repent for the many sins of his mother. <br>
-                    </p>
-                </center>
+        <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+            <ul class="nav navbar-nav">
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Repentance.html">Repentance</a></li>
+                <li><a href="Redemption.html">Redemption</a></li>
+                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Sources.html">Sources</a></li>
+            </ul>
+        </nav>
+        <center>
+            <h1>Repentance</h1>
+            <br>
+            <h2></h2>
+        </center>
+        <center>
+            <p>
+                Repentance can manifest itself to affect people's lives in many ways: <br>
+                "I could almost feel the emptiness in Soraya's womb, like it was a living, <br>
+                breathing thing." (Hosseini 189). Through what seems to be divine intervention, <br>
+                Amir's guilt manifests itself as an inability to have a child. Amir hasn't <br>
+                redeemed himself for his cowardice, and thus isn't able to produce offspring. <br>
+                <br>
+                <hr>
+                <br>
+                "Then late that fall, Farzana gave birth to a stillborn baby girl." (Hosseini 209). <br>
+                Hassan's repentance comes in the form of his first stillborn child. Repentence not <br>
+                for his sins (he seemingly dosen't have any), but the sin of his father being not Ali, <br>
+                but Baba. He also must repent for the many sins of his mother. <br>
+            </p>
+        </center>
     </body>
 </html>
