--- a/Sources.html
+++ b/Sources.html
@@ -1,10 +1,27 @@
 <html>
     <head>
-        <strong>Sources</strong>
+        <title>
+            The Kite Runner
+        </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="Style.css">
     </head>
-
     <body>
+        <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+            <ul class="nav navbar-nav">
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Repentance.html">Repentance</a></li>
+                <li><a href="Redemption.html">Redemption</a></li>
+                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Sources.html">Sources</a></li>
+            </ul>
+        </nav>
+        <center>
+        <h1>Sources</h1>
         <p>Hosseini, Khaled. The Kite Runner. TKR Publications, 2013.</p>
         <p>Nomaguchi, Kei M. “Parenthood and Psychological Well-Being: Clarifying the Role of Child Age and Parent-Child Relationship Quality.” Social Science Research, U.S. National Library of Medicine, Mar. 2012, www.ncbi.nlm.nih.gov/pmc/articles/PMC3489165/.</p>
+        </center>
     </body>
 </html>
