--- a/Psycology.html
+++ b/Psycology.html
@@ -1,27 +1,43 @@
 <html>
     <head>
+        <title>
+           Psycology
+        </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="Style.css">
     </head>
-
     <body>
-            <center>
-                    <h1>Psycology</h1>
-                    <br>
-                    <h2></h2>
-                </center>
-                <center>
-                    <p>
-                        Psycology is important in understanding people and the means in which they interact: <br>
-                        "After the initial shock of the transition to parenthood, parents expressed feeling special <br>
-                        and reported increased self-esteem." (Nomaguchi np). Through being able to raise and nurture <br>
-                        Sohrab, Amir becomes more comfident in himself and has a higher self-esteem. This boost in self <br>
-                        esteem also makes Amir feel more or less absolved of sin. <br>
-
-                        "In [a] study that focused on women with professional careers, mothers expressed that <br>
-                        they 'fell in love' with their children." (Nomaguchi np). Amir begins to feel the same <br>
-                        unconditional for Sorhab as he would his own child immediately after leaving Afganistan. <br>
-                        He does, in fact, "fall in love" with Sohrab, and starts to focus intensly on his needs. <br>
-                    </p>
-                </center>
+        <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
+            <ul class="nav navbar-nav">
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Repentance.html">Repentance</a></li>
+                <li><a href="Redemption.html">Redemption</a></li>
+                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Sources.html">Sources</a></li>
+            </ul>
+        </nav>
+        <center>
+            <h1>Psycology</h1>
+            <br>
+            <h2></h2>
+        </center>
+        <center>
+            <p>
+                Psycology is important in understanding people and the means in which they interact: <br>
+                "After the initial shock of the transition to parenthood, parents expressed feeling special <br>
+                and reported increased self-esteem." (Nomaguchi np). Through being able to raise and nurture <br>
+                Sohrab, Amir becomes more comfident in himself and has a higher self-esteem. This boost in self <br>
+                esteem also makes Amir feel more or less absolved of sin. <br>
+                <br>
+                <hr>
+                <br>
+                "In [a] study that focused on women with professional careers, mothers expressed that <br>
+                they 'fell in love' with their children." (Nomaguchi np). Amir begins to feel the same <br>
+                unconditional for Sorhab as he would his own child immediately after leaving Afganistan. <br>
+                He does, in fact, "fall in love" with Sohrab, and starts to focus intensly on his needs. <br>
+            </p>
+        </center>
     </body>
 </html>
