--- a/Psycology.html
+++ b/Psycology.html
@@ -21,6 +21,7 @@
         <center>
             <h1>Psycology</h1>
             <br>
+            <hr class="four">
             <h2></h2>
         </center>
         <center>
@@ -31,7 +32,7 @@
                 Sohrab, Amir becomes more comfident in himself and has a higher self-esteem. This boost in self <br>
                 esteem also makes Amir feel more or less absolved of sin. <br>
                 <br>
-                <hr>
+                <hr class="three">
                 <br>
                 "In [a] study that focused on women with professional careers, mothers expressed that <br>
                 they 'fell in love' with their children." (Nomaguchi np). Amir begins to feel the same <br>
