--- a/Redemption.html
+++ b/Redemption.html
@@ -21,6 +21,7 @@
         <center>
             <h1>Redemption</h1>
             <br>
+            <hr class="four">
             <h2>Redemption rears its head in The Kite Runner in many forms</h2>
         </center>
         <center>
@@ -31,14 +32,14 @@
                 that there is a way to find the redemption he so desperately wants. <br>
                 Redemption in the form of helping a particular child. <br>
                 <br>
-                <hr>
+                <hr class="three">
                 <br>
                 "A way to end the cycle. With a little boy. An orphan. <br>
                 Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
                 comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
                 able to do wat he couldn't back in the alley and be brave. <br>
                 <br>
-                <hr>
+                <hr class="three" style="background-color: dimgrey;">
                 <br>
                 "I looked down at Sohrab. One corner of his mouth had curled up <br>
                 just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
