--- a/Repentance.html
+++ b/Repentance.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-            <title>
-                Repentance
-            </title>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-            <link rel="stylesheet" href="Style.css">
+        <title>
+            Repentance
+        </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body>
         <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
@@ -21,7 +21,7 @@
         <center>
             <h1>Repentance</h1>
             <br>
-            <h2></h2>
+            <hr class="four">
         </center>
         <center>
             <p>
@@ -31,7 +31,7 @@
                 Amir's guilt manifests itself as an inability to have a child. Amir hasn't <br>
                 redeemed himself for his cowardice, and thus isn't able to produce offspring. <br>
                 <br>
-                <hr>
+                <hr class="three">
                 <br>
                 "Then late that fall, Farzana gave birth to a stillborn baby girl." (Hosseini 209). <br>
                 Hassan's repentance comes in the form of his first stillborn child. Repentence not <br>
