--- a/Sources.html
+++ b/Sources.html
@@ -20,6 +20,7 @@
         </nav>
         <center>
         <h1>Sources</h1>
+        <hr class="four">
         <p>Hosseini, Khaled. The Kite Runner. TKR Publications, 2013.</p>
         <p>Nomaguchi, Kei M. “Parenthood and Psychological Well-Being: Clarifying the Role of Child Age and Parent-Child Relationship Quality.” Social Science Research, U.S. National Library of Medicine, Mar. 2012, www.ncbi.nlm.nih.gov/pmc/articles/PMC3489165/.</p>
         </center>
