Reneme file, add images, add animations

--- a/Redemption.html
+++ b/Redemption.html
@@ -22,7 +22,6 @@
             <h1>Redemption</h1>
             <br>
             <hr class="four">
-            <h2>Redemption rears its head in The Kite Runner in many forms</h2>
         </center>
         <center>
             <p>
@@ -47,6 +46,10 @@
                 Sohrab be happy again, Amir completes the task given to him to <br>
                 Rahim Kahn, to be good again. <br>
             </p>
+            <hr class="four">
+            <img src="Assets/reclamation.jpg" alt="Angel Wings Image" class="angel">
+            <br>
+            <br>
         </center>
     </body>
 </html>
