--- a/Repentance.html
+++ b/Repentance.html
@@ -24,20 +24,26 @@
             <hr class="four">
         </center>
         <center>
-            <p>
+            <p class="p1">
                 Repentance can manifest itself to affect people's lives in many ways: <br>
                 "I could almost feel the emptiness in Soraya's womb, like it was a living, <br>
                 breathing thing." (Hosseini 189). Through what seems to be divine intervention, <br>
                 Amir's guilt manifests itself as an inability to have a child. Amir hasn't <br>
                 redeemed himself for his cowardice, and thus isn't able to produce offspring. <br>
+            </p>
                 <br>
                 <hr class="three">
                 <br>
+            <p class="p1">
                 "Then late that fall, Farzana gave birth to a stillborn baby girl." (Hosseini 209). <br>
                 Hassan's repentance comes in the form of his first stillborn child. Repentence not <br>
                 for his sins (he seemingly dosen't have any), but the sin of his father being not Ali, <br>
                 but Baba. He also must repent for the many sins of his mother. <br>
             </p>
+            <hr class="four">
+            <img src="Assets/repentance.jpg" alt="Chains" class="chains">
+            <br>
+            <br>
         </center>
     </body>
 </html>
