Change font size and image size

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
             <img src="Assets/KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
             <br> 
             <hr class="three">
-            <h2>Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
+            <h2 class="p1">Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
             <br>
             <br>
         </center>
