Change styling and layout

--- a/Psycology.html
+++ b/Psycology.html
@@ -25,15 +25,17 @@
             <h2></h2>
         </center>
         <center>
-            <p>
-                Psycology is important in understanding people and the means in which they interact: <br>
+            <p style="font-size: 130%;"> <br>Psycology is important in understanding people and the means in which they interact <br></p>
+            <p class="p1">
                 "After the initial shock of the transition to parenthood, parents expressed feeling special <br>
                 and reported increased self-esteem" (Nomaguchi np). Through being able to raise and nurture <br>
                 Sohrab, Amir becomes more comfident in himself and has a higher self-esteem. This boost in self <br>
                 esteem also makes Amir feel more or less absolved of sin. <br>
+            </p>
                 <br>
                 <hr class="three">
                 <br>
+            <p class="p1">
                 "In a study that focused on women with professional careers, mothers expressed that <br>
                 they 'fell in love' with their children" (Nomaguchi np). Amir begins to feel the same <br>
                 unconditional for Sorhab as he would his own child immediately after leaving Afganistan. <br>
