--- a/Redemption.html
+++ b/Redemption.html
@@ -24,8 +24,8 @@
             <hr class="four">
         </center>
         <center>
-            <p>
-                Some of the more prominent examples: <br>
+            <p style="font-size: 130%;">Some of the prominent examples: <br></p>
+            <p class="p1">
                 "There is a way to be good again" (Hosseini 2). <br>
                 A line repeated many times, and for good reason. Amir realizes <br>
                 that there is a way to find the redemption he so desperately wants. <br>
@@ -33,6 +33,8 @@
                 <br>
                 <hr class="three">
                 <br>
+            </p>
+            <p class="p1">
                 "A way to end the cycle. With a little boy. An orphan. <br>
                 Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
                 comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
@@ -40,6 +42,8 @@
                 <br>
                 <hr class="three" style="background-color: dimgrey;">
                 <br>
+            </p>
+            <p class="p1">
                 "I looked down at Sohrab. One corner of his mouth had curled up <br>
                 just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
                 Afganistan, Amir feels almost redeemed, but not quite. In helping <br>
