--- a/Repentance.html
+++ b/Repentance.html
@@ -24,8 +24,8 @@
             <hr class="four">
         </center>
         <center>
+            <p style="font-size: 130%;">Repentance can manifest itself to affect people's lives in many ways: <br></p>
             <p class="p1">
-                Repentance can manifest itself to affect people's lives in many ways: <br>
                 "I could almost feel the emptiness in Soraya's womb, like it was a living, <br>
                 breathing thing." (Hosseini 189). Through what seems to be divine intervention, <br>
                 Amir's guilt manifests itself as an inability to have a child. Amir hasn't <br>
