Add audio for all pages and edit font on sources page

--- a/Redemption.html
+++ b/Redemption.html
@@ -18,42 +18,50 @@
                 <li><a href="Sources.html">Sources</a></li>
             </ul>
         </nav>
-        <center>
-            <h1>Redemption</h1>
-            <br>
-            <hr class="four">
-        </center>
-        <center>
-            <p style="font-size: 130%;">Some of the prominent examples: <br></p>
-            <p class="p1">
-                "There is a way to be good again" (Hosseini 2). <br>
-                A line repeated many times, and for good reason. Amir realizes <br>
-                that there is a way to find the redemption he so desperately wants. <br>
-                Redemption in the form of helping a particular child. <br>
+        <div onmousedown="mouseDown()">
+            <center>
+                <h1>Redemption</h1>
                 <br>
-                <hr class="three">
+                <hr class="four">
+            </center>
+            <center>
+                <p style="font-size: 130%;">Some of the prominent examples: <br></p>
+                <p class="p1">
+                    "There is a way to be good again" (Hosseini 2). <br>
+                    A line repeated many times, and for good reason. Amir realizes <br>
+                    that there is a way to find the redemption he so desperately wants. <br>
+                    Redemption in the form of helping a particular child. <br>
+                    <br>
+                    <hr class="three">
+                    <br>
+                </p>
+                <p class="p1">
+                    "A way to end the cycle. With a little boy. An orphan. <br>
+                    Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
+                    comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
+                    able to do wat he couldn't back in the alley and be brave. <br>
+                    <br>
+                    <hr class="three" style="background-color: dimgrey;">
+                    <br>
+                </p>
+                <p class="p1">
+                    "I looked down at Sohrab. One corner of his mouth had curled up <br>
+                    just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
+                    Afganistan, Amir feels almost redeemed, but not quite. In helping <br>
+                    Sohrab be happy again, Amir completes the task given to him to <br>
+                    Rahim Kahn, to be good again. <br>
+                </p>
+                <hr class="four">
+                <img src="Assets/reclamation.jpg" alt="Angel Wings Image" class="angel">
                 <br>
-            </p>
-            <p class="p1">
-                "A way to end the cycle. With a little boy. An orphan. <br>
-                Hassan's son. Somewhere in Kabul." (Hosseini 227). The redemption <br>
-                comes to him in the form of Hassan's child. Through Sohrab, Amir is <br>
-                able to do wat he couldn't back in the alley and be brave. <br>
                 <br>
-                <hr class="three" style="background-color: dimgrey;">
-                <br>
-            </p>
-            <p class="p1">
-                "I looked down at Sohrab. One corner of his mouth had curled up <br>
-                just so. A smile." (Hosseini 370). After bringing Sorhab back from <br>
-                Afganistan, Amir feels almost redeemed, but not quite. In helping <br>
-                Sohrab be happy again, Amir completes the task given to him to <br>
-                Rahim Kahn, to be good again. <br>
-            </p>
-            <hr class="four">
-            <img src="Assets/reclamation.jpg" alt="Angel Wings Image" class="angel">
-            <br>
-            <br>
-        </center>
+            </center>
+        </div>
+        <script>
+            var audio = new Audio('Assets/Redemption.wav');
+            function mouseDown() {
+                audio.play();
+            }
+        </script>
     </body>
 </html>
