--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="Style.css">
     </head>
-    <body onmousedown="mouseDown()">
+    <body>
         <nav class="navbar navbar-inverse" style="background-color: #000000;" class="nav">
             <ul class="nav navbar-nav">
                 <li><a href="Index.html">Home</a></li>
@@ -18,17 +18,19 @@
                 <li><a href="Psycology.html">Psycology</a></li>
                 <li><a href="Sources.html">Sources</a></li>
             </ul>
-          </nav>
-        <center>
-            <h1>The Kite Runner</h1>
-            <hr class="four" style="background-color: black; border-color: dimgrey;">
-            <img src="Assets/KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
-            <br> 
-            <hr class="three">
-            <h2 class="p1">Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
-            <br>
-            <br>
-        </center>
+        </nav>
+        <div  onmousedown="mouseDown()">
+            <center>
+                <h1>The Kite Runner</h1>
+                <hr class="four" style="background-color: black; border-color: dimgrey;">
+                <img src="Assets/KiteRunner.jpg" alt="Kite Runner Book" class="KiteRunnerImage">
+                <br> 
+                <hr class="three">
+                <h2 class="p1">Past Sins can be Attoned for Through the Protection and Nurturement of the Youth.</h2>
+                <br>
+                <br>
+            </center>
+        </div>
         <script>
             var audio = new Audio('Assets/test.wav');
             function mouseDown() {
