--- a/Psycology.html
+++ b/Psycology.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-           Psycology
+           Psychology
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,19 +14,19 @@
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="Repentance.html">Repentance</a></li>
                 <li><a href="Redemption.html">Redemption</a></li>
-                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Psycology.html">Psychology</a></li>
                 <li><a href="Sources.html">Sources</a></li>
             </ul>
         </nav>
         <div onmousedown="mouseDown()">
             <center>
-                <h1>Psycology</h1>
+                <h1>Psychology</h1>
                 <br>
                 <hr class="four">
                 <h2></h2>
             </center>
             <center>
-                <p style="font-size: 130%;"> <br>Psycology is important in understanding people and the means in which they interact <br></p>
+                <p style="font-size: 130%;"> <br>Psychology is important in understanding people and the means in which they interact <br></p>
                 <p class="p1">
                     "After the initial shock of the transition to parenthood, parents expressed feeling special <br>
                     and reported increased self-esteem" (Nomaguchi np). Through being able to raise and nurture <br>
