--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="Repentance.html">Repentance</a></li>
                 <li><a href="Redemption.html">Redemption</a></li>
-                <li><a href="Psycology.html">Psycology</a></li>
+                <li><a href="Psycology.html">Psychology</a></li>
                 <li><a href="Sources.html">Sources</a></li>
             </ul>
         </nav>
